TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2013-01-13 MickeM
 * Fixed crash when collector thread is not started.

2013-01-02 MickeM
 * Fixed message dialog when loading PythonScript module without python installed.
 * (re)add check_fiulesize which was accidentally removed.
 * Fix for http settings
 * fix for --version command line option

2012-12-28 MickeM
 * Reverted default NRPE encoding to "system" (not UTF-8).
 * Added new option to configure NRPE encoding:
    [/settings/NRPE/server]
    encoding = utf8
   Valid values are currently system and utf8 (and strangely enough utf7). If you need something else let me know.

2012-12-25 MickeM
 * Added option scan-range to CheckEventLog.
   This new option reduces the entries scanned a *lot* and can help solve memory, time and CPU issues.
   The idea is that is negative we start scanning from the end and once we hit something outsiden the range we stop scanning.
   There is a chanse that entries reported are "outside" the range so set range bigger then generate/written date/times (to reduce this risk).
     CheckEventLog file=application file=system MaxWarn=1 MaxCrit=1 "filter=generated gt -1h AND level eq 'info'" truncate=800 unique descriptions "syntax=%severity%: %source%: %message% (%count%)"
   Executes in 7 seconds adding scan-range=-5h executes in 0 seconds (yields the same result).
 * Added error message when overriding a commad (ie. when alias check_cpu overrides the new command check_cpu).
   Wont work (for technical reasons) for duplicate aliases ie.- alias x=foo and x=bar

2012-12-18 MickeM - 0.4.1 RELEASE
 * Fixed path issues in the installer
 * Fixed shortcuts in the installer
 * Fixed so clients can understand no prefixed arguments ie.
     ... -c nrpe_query -a command=check_ok host=129.168.0.1

2012-12-02 MickeM