@@ -33,6 +33,6 @@ SOURCE_GROUP(Generated FILES ${SRCS})
 SOURCE_GROUP(Sources FILES ${SRCS})
 ADD_WIX_INSTALLER(${ALIAS} "${SRCS}" "${DEPENDENCIES}" "${LOCALIZATIONS}")
 
-ADD_DEPENDENCIES(${TARGET} ${MAIN_NSCP_TARGET} ${ALL_MODULE_NAMES} ${ALL_TOOL_NAMES} ${ALL_INSTALLERS_DLLS_NAMES} copy_files copy_docs copy_scripts)
+ADD_DEPENDENCIES(${TARGET} ${MAIN_NSCP_TARGET} ${MAIN_NSCP_TARGET}_full_config ${ALL_MODULE_NAMES} ${ALL_TOOL_NAMES} ${ALL_INSTALLERS_DLLS_NAMES} copy_files copy_docs copy_scripts)
 
 SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "installers")
