@@ -109,6 +109,17 @@ IF(BREAKPAD_FOUND)
 	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS -DUSE_BREAKPAD)
 ENDIF(BREAKPAD_FOUND)
 
+#ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/nsclient-full.ini
+#	COMMAND ${CMAKE_BINARY_DIR}/${TARGET}
+#    ARGS settings --settings ini://nsclient-full.ini --add-defaults --load-all --generate
+#	WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+#    DEPENDS ${TARGET})
+
+ADD_CUSTOM_TARGET(${TARGET}_full_config
+	COMMAND ${CMAKE_BINARY_DIR}/${TARGET} settings --settings ini://nsclient-full.ini --add-defaults --load-all --generate
+	WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+	DEPENDS ${TARGET})
+
 TARGET_LINK_LIBRARIES(${TARGET}
 	${Boost_FILESYSTEM_LIBRARY}
 	${Boost_PROGRAM_OPTIONS_LIBRARY}
