@@ -4,6 +4,9 @@ TODO:
  * Fix dependonservice LanManWorkStation (old win)
  * Fix RtlStringFromGUID problem on NT4
 
+2013-01-17 MickeM
+ * Added nsclient-full.ini with "all" (non advanced) avalible options.
+
 2013-01-13 MickeM
  * Fixed crash when collector thread is not started.
 
